@@ -1,6 +1,6 @@
-Date: 2025-12-16
+Date: 2025-12-28
 Package: CHNOSZ
-Version: 2.2.0-12
+Version: 2.2.0-13
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
